--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .container {
-    width: 800px;
+    width: 960px;
     margin: auto;
     background-color: #fff;
 }
@@ -88,34 +88,66 @@ body {
 }
 
 .hero {
-    height: 250px;
+    height: 450px;
     background-image: url(img/hero.jpg);
     background-size: cover;
-    background-position: 0 -200px;
+    background-position: 0 -100px;
     border-bottom: 5px solid lightskyblue;
     border-top: 5px solid salmon;
 }
 
-.content {
+.main {
     padding: 20px;
+    width: 600px;
+    box-sizing: border-box;
+    fl
 }
 
-.content h2 {
+.main h2 {
     font-size: 28px;
 }
 
-.content .penulis {
+.main .penulis {
     font-size: 11px;
     margin-top: -5px;
 }
 
-.content .penulis a {
+.main .penulis a {
     color: salmon;
     text-decoration: none;
 } 
 
-.content p {
+.main p {
     margin-bottom: 20px;
     font-size: 14px;
 }
 
+.footer {
+    background-color: #333;
+    padding: 10px;
+}
+
+.footer .copy {
+    color: #eaeaea;
+    font-size: 12px;
+    text-align: center;
+}
+
+/* micro clearfix */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
